--- a/AIRelief/Views/Questions/Index.cshtml
+++ b/AIRelief/Views/Questions/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<AIRelief.Models.Question>
 
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -14,28 +15,10 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.order)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.heading)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.maintext)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.image)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.backvalue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.nextvalue)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.correctiontext)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.correctionimage)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Option1)
@@ -53,16 +36,10 @@
                 @Html.DisplayNameFor(model => model.Option5)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Option6)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Option7)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Option8)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.CorrectAnswer)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Category)
             </th>
             <th></th>
         </tr>
@@ -71,28 +48,10 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.order)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.heading)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.maintext)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.image)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.backvalue)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.nextvalue)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.correctiontext)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.correctionimage)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Option1)
@@ -110,16 +69,10 @@
                 @Html.DisplayFor(modelItem => item.Option5)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Option6)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Option7)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Option8)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CorrectAnswer)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Category)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
