--- a/AIRelief/Views/Shared/_AdminNavPartial.cshtml
+++ b/AIRelief/Views/Shared/_AdminNavPartial.cshtml
@@ -1,4 +1,5 @@
 @using AIRelief.Models
+@using AIRelief.Models
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.EntityFrameworkCore
 @inject AIReliefContext Context
@@ -6,13 +7,13 @@
 
 @{
     var user = await UserManager.GetUserAsync(User);
-    var appUser = await Context.Users.FirstOrDefaultAsync(u => u.IdentityUserId == user.Id);
-    
+    var appUser = user == null ? null : await Context.Users.FirstOrDefaultAsync(u => u.Email == user.Email);
+
     var isGroupAdmin = appUser?.AuthLevel == AuthLevel.GroupAdmin;
     var isSystemAdmin = appUser?.AuthLevel == AuthLevel.SystemAdmin;
 }
 
-@if (isGroupAdmin || isSystemAdmin)     
+@if (isGroupAdmin || isSystemAdmin)
 {
     <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button"
@@ -22,14 +23,16 @@
         <ul class="dropdown-menu" aria-labelledby="adminDropdown">
             @if (isGroupAdmin)
             {
-                <li><a class="dropdown-item" href="/Admin/GroupAdmin">Group Users</a></li>
-                <li><a class="dropdown-item" href="/Admin/UserAdmin">User Admin</a></li>
+                <li><a class="dropdown-item" href="/Admin/GroupAdmin/Index">Group Users</a></li>
+                <li><a class="dropdown-item" href="/Admin/GroupAdmin/GroupSettings">Group Settings</a></li>
+                <li><a class="dropdown-item" href="/Admin/GroupAdmin/GroupStatistics">Group Statistics</a></li>
             }
             @if (isSystemAdmin)
             {
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="/Admin/SystemAdmin/Groups">Manage Groups</a></li>
                 <li><a class="dropdown-item" href="/Admin/SystemAdmin/Users">Manage Users</a></li>
+                <li><a class="dropdown-item" href="/Admin/SystemAdmin/SystemAdmins">Manage System Admins</a></li>
             }
         </ul>
     </li>
